<resources>
    <string name="app_name">Browser</string>
    <string name="enter_url">Enter Url</string>
    <string name="type_your_url_in_this_space">type your url </string>
    <string name="this_is_a_search_button">search button</string>
    <string name="click_this_to_go_on_previous_page">back button</string>
    <string name="bookmark_to_view_later">bookmark button</string>
    <string name="show_history">show history</string>
    <string name="click_this_to_go_on_next_page_previously_opened">click this to go on next page previously opened</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="javascript_enable">Enable Javascript</string>
    <string name="bookmarks_image">Bookmarks icon</string>
    <string name="close_the_bottom_sheet">Close the bottom sheet</string>
    <string name="history_icon">History icon</string>
    <string name="settings_icon">Settings icon</string>
</resources>