<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DialogSheetBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bottom_sheet"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bottom_sheet">
    <ImageView
        android:contentDescription="@string/close_the_bottom_sheet"
        android:paddingTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/arrow_down" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple">
        <ImageView
            android:contentDescription="@string/bookmarks_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/medium_bookmark"
            android:paddingStart="18.6dp"
            android:paddingVertical="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookmarks"
            android:layout_marginStart="14.8dp"
            android:paddingVertical="24dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple">
        <ImageView
            android:contentDescription="@string/history_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_history"
            android:paddingStart="16dp"
            android:paddingVertical="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:paddingVertical="24dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple">
        <ImageView
            android:contentDescription="@string/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            android:paddingStart="16dp"
            android:paddingVertical="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:paddingVertical="24dp"
            android:textColor="@color/black"
            />
    </LinearLayout>

</LinearLayout>