<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentInsetStart="0dp"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll|enterAlways|snap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/home"
            android:background="@drawable/ripple"
            android:contentDescription="@string/click_this_to_go_on_previous_page"
            android:padding="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home"
            />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            >
            <EditText
                android:inputType="textWebEmailAddress"
                android:id="@+id/urll"
                android:layout_width="fill_parent"
                android:paddingVertical="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="42dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent"
                android:hint="@string/enter_url"

                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:minHeight="48dp"
                android:background="@drawable/edit_txt"
                android:imeOptions="flagNoFullscreen|actionSearch"
                />


            <ImageButton

                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="10dp"
                android:background="@drawable/cross"

                />

        </FrameLayout>

        <ImageButton
            android:id="@+id/search"
            android:padding="20dp"
            android:contentDescription="@string/this_is_a_search_button"
            android:layout_marginVertical="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:background="@drawable/ripple"
            android:src="@drawable/search" />
    </LinearLayout>


</androidx.appcompat.widget.Toolbar>